# Multi-Agent-Tarot

./: .dockerignore  .env.example  .gitignore  DEMO-SCRIPT.md  Developer-Guide.md  README.md  docker-compose.yml  requirements.txt  ruff.toml
backend/: .env.example  Dockerfile  README.md  alembic.ini  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260403_0001_initial_schema.py  20260403_0002_add_session_normalized_question.py  20260421_0003_add_clarifier_fields.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  errors.py  router.py
backend/app/api/routes/: __init__.py  health.py  readings.py  sessions.py  traces.py
backend/app/api/v1/: health.py  tarot.py
backend/app/application/services/: __init__.py  tarot_reading_service.py  tarot_session_service.py
backend/app/core/: __init__.py  config.py  gateways.py  logging.py
backend/app/db/: base.py
backend/app/domain/enums/: __init__.py  card_orientation.py  card_position.py  risk_level.py  safety_action.py  sender_role.py  session_message_type.py  spread_type.py  trace_event_status.py  workflow_status.py
backend/app/domain/repositories/: __init__.py  tarot_reading_repository.py  tarot_session_repository.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/config/: settings.py
backend/app/infrastructure/db/: __init__.py  base.py  models.py  session.py
backend/app/infrastructure/logging/: __init__.py  setup.py  (+2 more)
backend/app/models/: __init__.py  dto.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  orchestrator.py  storage.py
backend/app/tests/: conftest.py  test_api_stub.py
backend/app/web/: __init__.py  demo.py
backend/knowledge/spreads/: past_present_future.json  three_card.json
backend/knowledge/tarot_cards/: major_arcana.json
backend/multi_agent_tarot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: __init__.py  generate_tarot_deck_images.py  generate_tarot_image_smoke.py
backend/scripts/tarot_image_generation/: __init__.py  batch.py  catalog.py  client.py  config.py  job.py  smoke.py  tarot_image_prompts.json
(+147 files in other folders)
