[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-tarot-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for Multi-Agent-Tarot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2.0",
    "fastapi>=0.115,<1.0",
    "langgraph>=1.0.8,<1.1",
    "langfuse>=2.0,<3.0",
    "openai>=1.0,<2.0",
    "pydantic-settings>=2.8,<3.0",
    "PyYAML>=6.0,<7.0",
    "psycopg[binary]>=3.2,<4.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = [".", ".."]
testpaths = ["app/tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["app"]

[tool.ruff.lint]
# E4/E7/E9: critical pycodestyle errors; F: pyflakes (undefined names, unused imports)
select = ["E4", "E7", "E9", "F"]
ignore = [
    "F401",  # unused-import — many are intentional re-exports
]

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = ["F811"]  # allow redefined names in test fixtures
